chore(OH2-76): Update openapi spec file
